syntax = "proto3";

package core.v1;

import "google/protobuf/timestamp.proto";

service CoreService {
  rpc InitSandbox(InitSandboxRequest) returns (InitSandboxResponse) {}
}

message InitSandboxRequest {}

message InitSandboxResponse {
  google.protobuf.Timestamp created_at = 1;
  string sandbox_id = 2;
  string api_key = 3;
}
